<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="org.sqlunet.browser.MainActivity">
	<item
		android:id="@+id/action_settings"
		android:showAsAction="never"
		android:title="@string/action_settings"/>
	<item
		android:id="@+id/action_status"
		android:showAsAction="never"
		android:title="@string/action_status"/>
	<item
		android:id="@+id/action_storage"
		android:showAsAction="never"
		android:title="@string/action_storage"/>
	<item
		android:id="@+id/action_setup"
		android:showAsAction="never"
		android:title="@string/action_setup"/>
	<item
		android:id="@+id/action_setup_sql"
		android:showAsAction="never"
		android:title="@string/action_setup_sql"/>
	<item
		android:id="@+id/action_manage"
		android:showAsAction="never"
		android:title="@string/action_manage"/>
	<item
		android:id="@+id/action_help"
		android:showAsAction="never"
		android:title="@string/action_help"/>
	<item
		android:id="@+id/action_about"
		android:showAsAction="never"
		android:title="@string/action_about"/>
	<item
		android:id="@+id/action_appsettings"
		android:showAsAction="never"
		android:title="@string/action_appsettings"/>
	<item
		android:id="@+id/action_quit"
		android:showAsAction="never"
		android:title="@string/action_quit"/>

</menu>
