<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="org.sqlunet.browser.MainActivity">
	<item
		android:id="@+id/action_settings"
		android:title="@string/action_settings"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_status"
		android:title="@string/action_status"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_storage"
		android:title="@string/action_storage"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_setup"
		android:title="@string/action_setup"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_setup_sql"
		android:title="@string/action_setup_sql"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_manage"
		android:title="@string/action_manage"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_help"
		android:title="@string/action_help"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_about"
		android:title="@string/action_about"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_appsettings"
		android:title="@string/action_appsettings"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_quit"
		android:title="@string/action_quit"
		app:showAsAction="never"/>

</menu>
