<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.sqlunet.browser.config.DownloadActivity" >

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="false"
        android:max="100"
        android:progress="0"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/downloadButton"
        style="?android:attr/buttonStyle"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/bg_button"
        android:contentDescription="@string/action_download"
        android:src="@drawable/bn_download"
        android:text="@string/action_download" />

    <TextView
        android:id="@+id/src"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/downloadButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:drawablePadding="5dp"
        android:drawableTop="@drawable/ic_download_source"
        android:text="@string/download_source" />
    <!-- android:singleLine="true" -->
    <!-- android:ellipsize="marquee" -->

    <TextView
        android:id="@+id/target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/downloadButton"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:drawableBottom="@drawable/ic_download_dest"
        android:drawablePadding="5dp"
        android:text="@string/download_dest" />
    <!-- android:singleLine="true" -->
    <!-- android:ellipsize="marquee" -->

    <TextView
        android:id="@+id/progressStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:text="@string/action_download"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="invisible" />

</RelativeLayout>