<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginBottom="20dp"
		android:layout_marginTop="20dp"
		android:contentDescription="@string/app_name"
		android:src="@drawable/ic_launcher"/>

	<GridLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:columnCount="3"
		android:orientation="horizontal">

		<!-- database -->

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical|end"
			android:layout_columnWeight="5"
			android:maxLines="1"
			android:text="@string/status_database"
			tools:targetApi="lollipop"/>

		<ImageView
			android:id="@+id/status_database"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_columnWeight="2"
			android:background="@android:color/holo_orange_light"
			android:contentDescription="@string/status_database"
			android:paddingBottom="20dp"
			android:paddingEnd="20dp"
			android:paddingStart="20dp"
			android:paddingTop="20dp"
			android:src="@drawable/ic_unknown"
			tools:targetApi="lollipop"/>

		<ImageButton
			android:id="@+id/databaseButton"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end|center_vertical"
			android:layout_columnWeight="1"
			android:background="@drawable/bg_button"
			android:contentDescription="@string/status_database"
			android:src="@drawable/bn_download"
			android:visibility="gone"
			tools:targetApi="lollipop"/>

		<!-- predicatematrix -->

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical|end"
			android:layout_columnWeight="5"
			android:text="@string/status_predicatematrix"
			tools:targetApi="lollipop"
			android:maxLines="1"/>

		<ImageView
			android:id="@+id/status_predicatematrix"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_columnWeight="2"
			android:background="@android:color/holo_orange_light"
			android:contentDescription="@string/status_predicatematrix"
			android:paddingBottom="20dp"
			android:paddingEnd="20dp"
			android:paddingStart="20dp"
			android:paddingTop="20dp"
			android:src="@drawable/ic_unknown"
			tools:targetApi="lollipop"/>

		<ImageButton
			android:id="@+id/predicatematrixButton"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end|center_vertical"
			android:layout_columnWeight="1"
			android:background="@drawable/bg_button"
			android:contentDescription="@string/status_predicatematrix"
			android:src="@drawable/bn_setup"
			android:visibility="gone"
			tools:targetApi="lollipop"/>

		<!-- indexes -->

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical|end"
			android:layout_columnWeight="5"
			android:text="@string/status_indexes"
			tools:targetApi="lollipop"
			android:maxLines="1"/>

		<ImageView
			android:id="@+id/status_indexes"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_columnWeight="2"
			android:background="@android:color/holo_orange_light"
			android:contentDescription="@string/status_indexes"
			android:paddingBottom="20dp"
			android:paddingEnd="20dp"
			android:paddingStart="20dp"
			android:paddingTop="20dp"
			android:src="@drawable/ic_unknown"
			tools:targetApi="lollipop"/>

		<ImageButton
			android:id="@+id/indexesButton"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end|center_vertical"
			android:layout_columnWeight="1"
			android:background="@drawable/bg_button"
			android:contentDescription="@string/status_indexes"
			android:src="@drawable/bn_setup"
			android:visibility="gone"
			tools:targetApi="lollipop"/>

		<!-- textsearch -->

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical|end"
			android:layout_columnWeight="5"
			android:text="@string/status_textsearch"
			tools:targetApi="lollipop"
			android:maxLines="1"/>

		<ImageView
			android:id="@+id/status_textsearch"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_columnWeight="2"
			android:background="@android:color/holo_orange_light"
			android:contentDescription="@string/status_textsearch"
			android:paddingBottom="20dp"
			android:paddingEnd="20dp"
			android:paddingStart="20dp"
			android:paddingTop="20dp"
			android:src="@drawable/ic_unknown"
			tools:targetApi="lollipop"/>

		<ImageButton
			android:id="@+id/textsearchButton"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end|center_vertical"
			android:layout_columnWeight="1"
			android:background="@drawable/bg_button"
			android:contentDescription="@string/status_textsearch"
			android:src="@drawable/bn_setup"
			android:visibility="gone"
			tools:targetApi="lollipop"/>

		<!-- textsearch framenet -->

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical|end"
			android:layout_columnWeight="5"
			android:text="@string/status_textsearchfn"
			tools:targetApi="lollipop"
			android:maxLines="1"/>

		<ImageView
			android:id="@+id/status_textsearchfn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_columnWeight="2"
			android:background="@android:color/holo_orange_light"
			android:contentDescription="@string/status_textsearchfn"
			android:paddingBottom="20dp"
			android:paddingEnd="20dp"
			android:paddingStart="20dp"
			android:paddingTop="20dp"
			android:src="@drawable/ic_unknown"
			tools:targetApi="lollipop"/>

		<ImageButton
			android:id="@+id/textsearchfnButton"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end|center_vertical"
			android:layout_columnWeight="1"
			android:background="@drawable/bg_button"
			android:contentDescription="@string/status_textsearchfn"
			android:src="@drawable/bn_setup"
			android:visibility="gone"
			tools:targetApi="lollipop"/>
	</GridLayout>

</LinearLayout>